# breakout

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml  ruff.toml
breakout/: __init__.py  adaptive_threshold.py  arima.py  cumsum_online.py  generate_timeseries.py  isolated_forest.py  ma.py  parameter_tuning.py  pelt.py  run_breakout.py  seasonal_decomposition.py  visualization.py  wavelet.py  windowed_variance.py
test/: test_cumsum_online.py  test_isolated_forest.py  test_wavelet.py
