[tool.poetry]
name = "breakout"
version = "0.1.0"
description = "A library for detecting breakouts in time series data"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "breakout" },
]

[tool.poetry.scripts]
breakout = "breakout.run_breakout:main"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
pandas = "^2.2.2"
statsmodels = "^0.13.0"
scikit-learn = "^1.0.0"
pywavelets = "^1.6.0"
ruptures = "^1.1.9"

[tool.poetry.group.dev.dependencies]
tqdm = "^4.66.5"
matplotlib = "^3.5.0"
ruff = "^0.5.7"
rich = "^13.7.1"
pytest = "^8.3.2"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

